--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <a href="#">Learn More <i class="fas fa-angle-double-right"></i></a>
       </div>
       <div>
-        <img src="img/18.jpg" alt="" />
+        <img src="img/18.jpgg" alt="" />
         <h3>Jawbimy</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam dolore fugit esse corporis nesciunt minima
           doloremque modi mollitia rerum, similique optio eligendi itaque amet qui ullam vel incidunt asperiores fuga?
