--- a/index.html
+++ b/index.html
@@ -27,20 +27,18 @@
       <!-- Left Nav -->
       <ul class="nav-menu">
         <li>
-          <a href="#">Recientes</a>
+          <a href="recientes.html">Recientes</a>
         </li>
         <li>
-          <a href="#">News</a>
+          <a href="news.html">News</a>
         </li>
         <li>
-          <a href="#">Creator</a>
+          <a href="creators.html">Creator</a>
         </li>
         <li>
           <a href="#">Comic complet</a>
         </li>
-        <li>
-          <a href="#">Cryptocurrencies</a>
-        </li>
+       
         <li>
           <a href="#">More</a>
         </li>
