--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <img src="img/0.jpg" alt="img" class="nav-brand">
       <!-- Left Nav -->
       <ul class="nav-menu">
-        <li>
+       <li>
           <a href="recientes.html">Recientes</a>
         </li>
         <li>
@@ -36,11 +36,11 @@
           <a href="creators.html">Creator</a>
         </li>
         <li>
-          <a href="#">Comic complet</a>
+          <a href="Comic complet.html">Comic complet</a>
         </li>
        
         <li>
-          <a href="#">More</a>
+          <a href="More.html">More</a>
         </li>
       </ul>
 
